Fixed the qml date in trip

cwTrip now uses QDateTime instead of QDate to store and report the date
This fixes issue found from https://bugreports.qt.io/browse/QTBUG-29328