src/cwRegionLoadTask.cpp
@@ -293,7 +293,7 @@ void cwRegionLoadTask::loadTrip(const CavewhereProto::Trip& protoTrip, cwTrip *t
     QDate tripDate = loadDate(protoTrip.date());
 
     trip->setName(tripName);
-    trip->setDate(tripDate);
+    trip->setDate(QDateTime(tripDate));
 
     loadSurveyNoteModel(protoTrip.notemodel(), trip->notes());
     loadTripCalibration(protoTrip.tripcalibration(), trip->calibrations());
